Cancel tasks when error limit is reached
Cancel tasksets when tasks are finished or canceled

--- a/servers/web/public/views/dashboard/add.html
+++ b/servers/web/public/views/dashboard/add.html
@@ -31,7 +31,7 @@
               <div class="input-group-prepend">
                 <span class="input-group-text">Limit of errors in a single task</span>
               </div>
-              <input class="col-md-2" ng-model="addTaskForm.errorLimit" type="number" value="{{addTaskForm.errorLimit || 5}}"></input>
+              <input class="col-md-2" ng-model="addTaskForm.errorLimit" type="number" value="{{addTaskForm.errorLimit}}"></input>
             </div>
 
             <div class="mb-3">
