--- a/servers/web/public/css/style.css
+++ b/servers/web/public/css/style.css
@@ -2,109 +2,113 @@
   background-color: #343a40;
 }
 
-  .navbar .navbar-brand {
-    color: #ecf0f1;
-  }
+.navbar .navbar-brand {
+  color: #ecf0f1;
+}
 
-    .navbar .navbar-brand:hover,
-    .navbar .navbar-brand:focus {
-      color: #ffffff;
-    }
+.modal-backdrop {
+  background-color: rgba(0, 0, 0, 0.5);
+}
 
-  .navbar .navbar-text {
-    color: #ecf0f1;
-  }
+.navbar .navbar-brand:hover,
+.navbar .navbar-brand:focus {
+  color: #ffffff;
+}
 
-    .navbar .navbar-text a {
-      color: #ffffff;
-    }
+.navbar .navbar-text {
+  color: #ecf0f1;
+}
 
-      .navbar .navbar-text a:hover,
-      .navbar .navbar-text a:focus {
-        color: #ffffff;
-      }
+.navbar .navbar-text a {
+  color: #ffffff;
+}
 
-  .navbar .navbar-nav .nav-link {
-    color: #ecf0f1;
-    border-radius: .25rem;
-    margin: 0 0.25em;
-  }
+.navbar .navbar-text a:hover,
+.navbar .navbar-text a:focus {
+  color: #ffffff;
+}
 
-    .navbar .navbar-nav .nav-link:not(.disabled):hover,
-    .navbar .navbar-nav .nav-link:not(.disabled):focus {
-      color: #ffffff;
-    }
+.navbar .navbar-nav .nav-link {
+  color: #ecf0f1;
+  border-radius: .25rem;
+  margin: 0 0.25em;
+}
 
-  .navbar .navbar-nav .dropdown-menu {
-    background-color: #36404e;
-    border-color: #1e242b;
-  }
+.navbar .navbar-nav .nav-link:not(.disabled):hover,
+.navbar .navbar-nav .nav-link:not(.disabled):focus {
+  color: #ffffff;
+}
 
-    .navbar .navbar-nav .dropdown-menu .dropdown-item {
-      color: #ecf0f1;
-    }
+.navbar .navbar-nav .dropdown-menu {
+  background-color: #36404e;
+  border-color: #1e242b;
+}
 
-      .navbar .navbar-nav .dropdown-menu .dropdown-item:hover,
-      .navbar .navbar-nav .dropdown-menu .dropdown-item:focus,
-      .navbar .navbar-nav .dropdown-menu .dropdown-item.active {
-        color: #ffffff;
-        background-color: #1e242b;
-      }
+.navbar .navbar-nav .dropdown-menu .dropdown-item {
+  color: #ecf0f1;
+}
 
-    .navbar .navbar-nav .dropdown-menu .dropdown-divider {
-      border-top-color: #1e242b;
-    }
+.navbar .navbar-nav .dropdown-menu .dropdown-item:hover,
+.navbar .navbar-nav .dropdown-menu .dropdown-item:focus,
+.navbar .navbar-nav .dropdown-menu .dropdown-item.active {
+  color: #ffffff;
+  background-color: #1e242b;
+}
 
-  .navbar .navbar-nav .nav-item.active .nav-link,
-  .navbar .navbar-nav .nav-item.active .nav-link:hover,
-  .navbar .navbar-nav .nav-item.active .nav-link:focus,
-  .navbar .navbar-nav .nav-item.show .nav-link,
-  .navbar .navbar-nav .nav-item.show .nav-link:hover,
-  .navbar .navbar-nav .nav-item.show .nav-link:focus {
-    color: #ffffff;
-    background-color: #1e242b;
-  }
+.navbar .navbar-nav .dropdown-menu .dropdown-divider {
+  border-top-color: #1e242b;
+}
 
-  .navbar .navbar-toggle {
-    border-color: #1e242b;
-  }
+.navbar .navbar-nav .nav-item.active .nav-link,
+.navbar .navbar-nav .nav-item.active .nav-link:hover,
+.navbar .navbar-nav .nav-item.active .nav-link:focus,
+.navbar .navbar-nav .nav-item.show .nav-link,
+.navbar .navbar-nav .nav-item.show .nav-link:hover,
+.navbar .navbar-nav .nav-item.show .nav-link:focus {
+  color: #ffffff;
+  background-color: #1e242b;
+}
 
-    .navbar .navbar-toggle:hover,
-    .navbar .navbar-toggle:focus {
-      background-color: #1e242b;
-    }
+.navbar .navbar-toggle {
+  border-color: #1e242b;
+}
 
-    .navbar .navbar-toggle .navbar-toggler-icon {
-      color: #ecf0f1;
-    }
+.navbar .navbar-toggle:hover,
+.navbar .navbar-toggle:focus {
+  background-color: #1e242b;
+}
 
-  .navbar .navbar-collapse,
-  .navbar .navbar-form {
-    border-color: #ecf0f1;
-  }
+.navbar .navbar-toggle .navbar-toggler-icon {
+  color: #ecf0f1;
+}
 
-  .navbar .navbar-link {
-    color: #ecf0f1;
-  }
+.navbar .navbar-collapse,
+.navbar .navbar-form {
+  border-color: #ecf0f1;
+}
 
-    .navbar .navbar-link:hover {
-      color: #ffffff;
-    }
+.navbar .navbar-link {
+  color: #ecf0f1;
+}
+
+.navbar .navbar-link:hover {
+  color: #ffffff;
+}
 
 @media (max-width: 575px) {
   .navbar-expand-sm .navbar-nav .show .dropdown-menu .dropdown-item {
     color: #ecf0f1;
   }
 
-    .navbar-expand-sm .navbar-nav .show .dropdown-menu .dropdown-item:hover,
-    .navbar-expand-sm .navbar-nav .show .dropdown-menu .dropdown-item:focus {
-      color: #ffffff;
-    }
+  .navbar-expand-sm .navbar-nav .show .dropdown-menu .dropdown-item:hover,
+  .navbar-expand-sm .navbar-nav .show .dropdown-menu .dropdown-item:focus {
+    color: #ffffff;
+  }
 
-    .navbar-expand-sm .navbar-nav .show .dropdown-menu .dropdown-item.active {
-      color: #ffffff;
-      background-color: #1e242b;
-    }
+  .navbar-expand-sm .navbar-nav .show .dropdown-menu .dropdown-item.active {
+    color: #ffffff;
+    background-color: #1e242b;
+  }
 }
 
 @media (max-width: 767px) {
@@ -112,15 +116,15 @@
     color: #ecf0f1;
   }
 
-    .navbar-expand-md .navbar-nav .show .dropdown-menu .dropdown-item:hover,
-    .navbar-expand-md .navbar-nav .show .dropdown-menu .dropdown-item:focus {
-      color: #ffffff;
-    }
+  .navbar-expand-md .navbar-nav .show .dropdown-menu .dropdown-item:hover,
+  .navbar-expand-md .navbar-nav .show .dropdown-menu .dropdown-item:focus {
+    color: #ffffff;
+  }
 
-    .navbar-expand-md .navbar-nav .show .dropdown-menu .dropdown-item.active {
-      color: #ffffff;
-      background-color: #1e242b;
-    }
+  .navbar-expand-md .navbar-nav .show .dropdown-menu .dropdown-item.active {
+    color: #ffffff;
+    background-color: #1e242b;
+  }
 }
 
 @media (max-width: 991px) {
@@ -128,15 +132,15 @@
     color: #ecf0f1;
   }
 
-    .navbar-expand-lg .navbar-nav .show .dropdown-menu .dropdown-item:hover,
-    .navbar-expand-lg .navbar-nav .show .dropdown-menu .dropdown-item:focus {
-      color: #ffffff;
-    }
+  .navbar-expand-lg .navbar-nav .show .dropdown-menu .dropdown-item:hover,
+  .navbar-expand-lg .navbar-nav .show .dropdown-menu .dropdown-item:focus {
+    color: #ffffff;
+  }
 
-    .navbar-expand-lg .navbar-nav .show .dropdown-menu .dropdown-item.active {
-      color: #ffffff;
-      background-color: #1e242b;
-    }
+  .navbar-expand-lg .navbar-nav .show .dropdown-menu .dropdown-item.active {
+    color: #ffffff;
+    background-color: #1e242b;
+  }
 }
 
 @media (max-width: 1199px) {
@@ -144,34 +148,34 @@
     color: #ecf0f1;
   }
 
-    .navbar-expand-xl .navbar-nav .show .dropdown-menu .dropdown-item:hover,
-    .navbar-expand-xl .navbar-nav .show .dropdown-menu .dropdown-item:focus {
-      color: #ffffff;
-    }
+  .navbar-expand-xl .navbar-nav .show .dropdown-menu .dropdown-item:hover,
+  .navbar-expand-xl .navbar-nav .show .dropdown-menu .dropdown-item:focus {
+    color: #ffffff;
+  }
 
-    .navbar-expand-xl .navbar-nav .show .dropdown-menu .dropdown-item.active {
-      color: #ffffff;
-      background-color: #1e242b;
-    }
+  .navbar-expand-xl .navbar-nav .show .dropdown-menu .dropdown-item.active {
+    color: #ffffff;
+    background-color: #1e242b;
+  }
 }
 
 .navbar-expand .navbar-nav .show .dropdown-menu .dropdown-item {
   color: #ecf0f1;
 }
 
-  .navbar-expand .navbar-nav .show .dropdown-menu .dropdown-item:hover,
-  .navbar-expand .navbar-nav .show .dropdown-menu .dropdown-item:focus {
-    color: #ffffff;
-  }
+.navbar-expand .navbar-nav .show .dropdown-menu .dropdown-item:hover,
+.navbar-expand .navbar-nav .show .dropdown-menu .dropdown-item:focus {
+  color: #ffffff;
+}
 
-  .navbar-expand .navbar-nav .show .dropdown-menu .dropdown-item.active {
-    color: #ffffff;
-    background-color: #1e242b;
-  }
+.navbar-expand .navbar-nav .show .dropdown-menu .dropdown-item.active {
+  color: #ffffff;
+  background-color: #1e242b;
+}
 
-  .gridster li {
-    background-color: #efefef;
-  }
+.gridster li {
+  background-color: #efefef;
+}
 
 .gridster .running {
   background-color: #4cff00;
@@ -182,7 +186,7 @@
 }
 
 .gridster h5 {
-  font-family:Calibri
+  font-family: Calibri
 }
 
 .sort-icon {
@@ -242,14 +246,16 @@ footer.sticky-footer {
   templates compile.  The !important is important given that there may be 
   other selectors that are more specific or come later and might alter display.  
  */
-[ng\:cloak], [ng-cloak], .ng-cloak {
+[ng\:cloak],
+[ng-cloak],
+.ng-cloak {
   display: none !important;
 }
 
 div .horizontal-rule {
-    width: 100%;
-    border-bottom: 1px solid #aaa;
-    margin: 5px 0 5px 0;
+  width: 100%;
+  border-bottom: 1px solid #aaa;
+  margin: 5px 0 5px 0;
 }
 
 .container-details {
@@ -260,28 +266,28 @@ div .horizontal-rule {
 }
 
 .container-details .box {
-    padding: 10px;
-    padding-bottom: 0px;
+  padding: 10px;
+  padding-bottom: 0px;
 }
 
 .container-details .one {
-    border-right: 1px solid #aaa;
-    grid-column: 1;
-    grid-row: 1;
+  border-right: 1px solid #aaa;
+  grid-column: 1;
+  grid-row: 1;
 }
 
 .container-details .two {
-    grid-column: 2;
-    grid-row: 1;
+  grid-column: 2;
+  grid-row: 1;
 }
 
 .container-details .wide {
-    grid-column: span 2;
-    border-top: 1px solid #aaa;
-    padding-top: 10px;
+  grid-column: span 2;
+  border-top: 1px solid #aaa;
+  padding-top: 10px;
 }
-   
+
 .container-details .three {
-    grid-row: 2;
-    margin-bottom: 10px;
+  grid-row: 2;
+  margin-bottom: 10px;
 }
