Add link to dashboard in home screen

--- a/servers/web/public/views/home.html
+++ b/servers/web/public/views/home.html
@@ -18,6 +18,13 @@
       <p class="text-white m-0">Execute your simulations in a distributed environment to get faster results</p>
     </div>
   </div>
+  <a ng-href="#!workers">
+    <div class="card text-white bg-primary my-4 text-center">
+      <div class="card-body">
+        <p class="text-white m-0">Access the dashboard</p>
+      </div>
+    </div>
+  </a>
 
   <!-- Content Row -->
   <div class="row">
