--- a/servers/web/public/views/dashboard/admin.html
+++ b/servers/web/public/views/dashboard/admin.html
@@ -16,7 +16,10 @@
                 <tr dir-paginate="user in users |  orderBy: !toggle?'-':'+' | itemsPerPage: 15 track by user._id">
                     <td>{{user.name}}</td>
                     <td>{{user.email}}</td>
-                    <td><a href="#!admin" ng-click="allow(user)"><i class="fa fa-check"></i></a></td>
+                    <td>
+                        <a href="#!admin" ng-click="allow(user)"><i class="fa fa-check"></i></a>
+                        <a href="#!admin" ng-click="disallow(user)"><i class="fa fa-times"></i></a>
+                    </td>
                 </tr>
             </tbody>
         </table>
