--- a/servers/web/public/views/dashboard/modals/user_rejection_confirm.html
+++ b/servers/web/public/views/dashboard/modals/user_rejection_confirm.html
@@ -1,10 +1,10 @@
 ﻿<div class="modal-header">
     <h3 class="modal-title" id="modal-title">
-      Do you wish to approve {{user.name}}?
+      Do you wish to reject {{user.name}}?
     </h3>
   </div>
   <div class="modal-body" id="modal-body">
-    If approved, {{user.name}} ({{user.email}}) will be able to execute tasks in any connected workers.
+    If rejected, {{user.name}} ({{user.email}}) will not be able to access any services later.
   </div>
   <div class="modal-footer">
     <button class="btn btn-secondary" type="button" ng-click="$ctrl.cancel()">No</button>
