Implement logOut button

--- a/src/servers/web/client/src/app/components/navbar/navbar.component.html
+++ b/src/servers/web/client/src/app/components/navbar/navbar.component.html
@@ -19,7 +19,7 @@
       <button mat-menu-item>
         <mat-icon>settings</mat-icon> Admin
       </button>
-      <button mat-menu-item>
+      <button mat-menu-item (click)="logOut()">
         <mat-icon>exit_to_app</mat-icon> Log Out
       </button>
     </mat-menu>
