Add user registration form

--- a/src/servers/web/client/src/app/components/login/login.component.html
+++ b/src/servers/web/client/src/app/components/login/login.component.html
@@ -1,5 +1,5 @@
-<div class="login-card-container">
-  <mat-card class="login-card col-xs-12 col-4">
+<div class="form-card-container">
+  <mat-card class="form-card col-xs-12 col-4">
     <h1>Log in</h1>
 
     <mat-card-content>
