client: Add dashboard and initial sidebar

--- a/src/servers/web/client/src/app/components/navbar/navbar.component.html
+++ b/src/servers/web/client/src/app/components/navbar/navbar.component.html
@@ -13,7 +13,7 @@
       <button mat-menu-item>
         <mat-icon>account_circle</mat-icon> Profile
       </button>
-      <button mat-menu-item>
+      <button mat-menu-item (click)="dashboard()">
         <mat-icon>dashboard</mat-icon> Dashboard
       </button>
       <button mat-menu-item *ngIf="isAdmin">
