--- a/src/servers/web/client/src/styles.scss
+++ b/src/servers/web/client/src/styles.scss
@@ -27,6 +27,34 @@ p {
   flex: 1;
 }
 
+.sidenav-container {
+  position: absolute;
+  top: 60px;
+  bottom: 0;
+  left: 0;
+  right: 0;
+}
+
+.sidenav {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 200px;
+  background-color: darken(#1976d2, 5);
+  color: white;
+  font-weight: 600;
+  border-top: 1px solid #aaa;
+}
+
+.sidenav-button {
+  color: #fff;
+
+  .mat-icon {
+    color: #fff;
+  }
+}
+
+
 .toolbar {
   height: 60px;
   display: flex;
