--- a/src/servers/web/client/src/app/components/dashboard/dashboard.component.html
+++ b/src/servers/web/client/src/app/components/dashboard/dashboard.component.html
@@ -1,17 +1,17 @@
 <mat-sidenav-container class="sidenav-container">
   <mat-sidenav #sidenav mode="side" opened fullscreen class="sidenav" [fixedInViewport]="true" [fixedTopGap]="60"
     [fixedBottomGap]="0">
-    <button mat-menu-item class="sidenav-button">
-      <mat-icon>account_circle</mat-icon> Workers
+    <button mat-menu-item class="sidenav-button" (click)="home()">
+      <mat-icon>house</mat-icon> Home
+    </button>
+    <button mat-menu-item class="sidenav-button" (click)="workers()">
+      <mat-icon>computer</mat-icon> Workers
     </button>
     <button mat-menu-item class="sidenav-button">
-      <mat-icon>dashboard</mat-icon> TaskSets
+      <mat-icon>archive</mat-icon> TaskSets
     </button>
     <button mat-menu-item class="sidenav-button">
-      <mat-icon>settings</mat-icon> Logs
-    </button>
-    <button mat-menu-item class="sidenav-button">
-      <mat-icon>exit_to_app</mat-icon> Log Out
+      <mat-icon>description</mat-icon> Logs
     </button>
   </mat-sidenav>
 
