client: Add lacuna-mat-table, ngx-loading and logs component

--- a/src/servers/web/client/src/app/components/dashboard/dashboard.component.html
+++ b/src/servers/web/client/src/app/components/dashboard/dashboard.component.html
@@ -10,7 +10,7 @@
     <button mat-menu-item class="sidenav-button">
       <mat-icon>archive</mat-icon> TaskSets
     </button>
-    <button mat-menu-item class="sidenav-button">
+    <button mat-menu-item class="sidenav-button" (click)="logs()">
       <mat-icon>description</mat-icon> Logs
     </button>
   </mat-sidenav>
