--- a/src/servers/web/client/src/app/components/dashboard/dashboard.component.html
+++ b/src/servers/web/client/src/app/components/dashboard/dashboard.component.html
@@ -7,9 +7,23 @@
     <button mat-menu-item class="sidenav-button" (click)="workers()">
       <mat-icon>computer</mat-icon> Workers
     </button>
-    <button mat-menu-item class="sidenav-button">
+
+    <button mat-menu-item [matMenuTriggerFor]="taskSetsMenu" class="sidenav-button">
       <mat-icon>archive</mat-icon> TaskSets
     </button>
+
+    <mat-menu #taskSetsMenu="matMenu" xPosition="before">
+      <button mat-menu-item>
+        <mat-icon>playlist_play</mat-icon> Running
+      </button>
+      <button mat-menu-item>
+        <mat-icon>playlist_add_check</mat-icon> Finished
+      </button>
+      <button mat-menu-item>
+        <mat-icon>delete</mat-icon> Canceled
+      </button>
+    </mat-menu>
+
     <button mat-menu-item class="sidenav-button" (click)="logs()">
       <mat-icon>description</mat-icon> Logs
     </button>
