all: Implement listing of tasksets
- Add TaskSetFilter interface
- Extend both filters interface to allow custom options
- Rename tasks index and router to tasksets
- Add possible filtering by state on getTaskSets
- Initialize TaskSets with Executing state

--- a/src/servers/web/client/src/app/components/dashboard/dashboard.component.html
+++ b/src/servers/web/client/src/app/components/dashboard/dashboard.component.html
@@ -13,13 +13,16 @@
     </button>
 
     <mat-menu #taskSetsMenu="matMenu" xPosition="before">
-      <button mat-menu-item>
-        <mat-icon>playlist_play</mat-icon> Running
+      <button mat-menu-item (click)="tasksets()">
+        <mat-icon>playlist_play</mat-icon> All
       </button>
-      <button mat-menu-item>
+      <button mat-menu-item (click)="executingTasksets()">
+        <mat-icon>playlist_play</mat-icon> Executing
+      </button>
+      <button mat-menu-item (click)="finishedTasksets()">
         <mat-icon>playlist_add_check</mat-icon> Finished
       </button>
-      <button mat-menu-item>
+      <button mat-menu-item (click)="canceledTasksets()">
         <mat-icon>delete</mat-icon> Canceled
       </button>
     </mat-menu>
