client: Show message when there are no workers and increase interval time

--- a/src/servers/web/client/src/app/components/workers/workers.component.html
+++ b/src/servers/web/client/src/app/components/workers/workers.component.html
@@ -3,4 +3,8 @@
   <div *ngFor="let worker of workers" class="col-6">
     <app-worker-card [worker]="worker"></app-worker-card>
   </div>
+
+  <div class="content text-align">
+    <h4>There are no connected workers</h4>
+  </div>
 </div>
