all: add profile view, edit user endpoint
Signed-off-by: Mikael Mello <git@mikaelmello.com>

--- a/src/servers/web/client/src/app/components/navbar/navbar.component.html
+++ b/src/servers/web/client/src/app/components/navbar/navbar.component.html
@@ -10,10 +10,10 @@
 
     <button mat-raised-button [matMenuTriggerFor]="menu">{{user.name}}</button>
     <mat-menu #menu="matMenu">
-      <button mat-menu-item>
+      <button mat-menu-item [routerLink]="['/', 'profile']">
         <mat-icon>account_circle</mat-icon> Profile
       </button>
-      <button mat-menu-item (click)="dashboard()">
+      <button mat-menu-item [routerLink]="['/', 'dashboard']">
         <mat-icon>dashboard</mat-icon> Dashboard
       </button>
       <button mat-menu-item *ngIf="isAdmin">
