Update task set create form to use list of already uploaded files
Signed-off-by: Mikael Mello <git@mikaelmello.com>

--- a/src/servers/web/client/src/app/components/dashboard/dashboard.component.html
+++ b/src/servers/web/client/src/app/components/dashboard/dashboard.component.html
@@ -31,6 +31,10 @@
     </mat-menu>
 
     <button mat-menu-item class="sidenav-button" (click)="logs()">
+      <mat-icon>description</mat-icon> Files
+    </button>
+
+    <button mat-menu-item class="sidenav-button" (click)="logs()">
       <mat-icon>description</mat-icon> Logs
     </button>
   </mat-sidenav>
