Implement creation of task sets
Signed-off-by: Mikael Mello <git@mikaelmello.com>

--- a/src/servers/web/client/src/app/components/taskset-create/taskset-create.component.html
+++ b/src/servers/web/client/src/app/components/taskset-create/taskset-create.component.html
@@ -15,23 +15,78 @@
       </div>
 
       <div class="row">
+        <mat-form-field class="col-2">
+          <mat-select placeholder="Runnable Type" formControlName="runnableType">
+            <mat-option value="java">Java (java -jar)</mat-option>
+            <mat-option value="java">Python 3 (python3)</mat-option>
+          </mat-select>
+          <mat-error>{{getErrorMessage('runnableType')}}</mat-error>
+        </mat-form-field>
         <mat-form-field class="col">
           <mat-select placeholder="Runnable File" formControlName="runnable" #runnableSelect>
             <mat-option>
-              <ngx-mat-select-search [formControl]="fileFilterCtrl"></ngx-mat-select-search>
+              <ngx-mat-select-search noEntriesFoundLabel="No files were found" placeholderLabel="Search"
+                [formControl]="fileFilterCtrl"></ngx-mat-select-search>
             </mat-option>
             <mat-option *ngFor="let file of filteredFiles | async" [value]="file._id">
               {{file.uploadTime | date: 'short'}} - {{file.name}}
             </mat-option>
           </mat-select>
+          <mat-error>{{getErrorMessage('runnable')}}</mat-error>
         </mat-form-field>
       </div>
 
       <div class="row">
         <mat-form-field class="col">
-          <input matInput placeholder="Template String" (change)="parse($event)" formControlName="template">
+          <input matInput placeholder="Command template" formControlName="template">
           <mat-error>{{getErrorMessage('template')}}</mat-error>
         </mat-form-field>
+
+        <div class="col-1">
+          <button mat-mini-fab color="primary" (click)="addInput()" type="button">
+            <mat-icon aria-label="Add input">add</mat-icon>
+          </button>
+        </div>
+      </div>
+
+      <div formArrayName="inputs" *ngFor="let input of form.get('inputs').controls; let i=index">
+        <div [formGroupName]="i" class="row">
+          <mat-form-field class="col-1">
+            <input matInput placeholder="Index" type="number" formControlName="index" [readonly]="true">
+            <mat-error>{{getErrorMessage('index', i)}}</mat-error>
+          </mat-form-field>
+          <mat-form-field class="col-1">
+            <input matInput placeholder="Priority" type="number" formControlName="priority">
+            <mat-error>{{getErrorMessage('priority', i)}}</mat-error>
+          </mat-form-field>
+          <mat-form-field class="col-2">
+            <mat-select placeholder="Type" formControlName="type">
+              <mat-option value="CommaSeparatedValues">Comma Separated Values</mat-option>
+              <mat-option value="StartEndStep">Start End Step</mat-option>
+              <mat-option value="Files">Files</mat-option>
+            </mat-select>
+            <mat-error>{{getErrorMessage('type', i)}}</mat-error>
+          </mat-form-field>
+
+          <mat-form-field class="col-6">
+            <input *ngIf="inputTypes[i] != 'Files'" matInput placeholder="Input" formControlName="input">
+            <mat-select *ngIf="inputTypes[i] == 'Files'" multiple placeholder="Files" formControlName="input">
+              <mat-option>
+                <ngx-mat-select-search noEntriesFoundLabel="No files were found" placeholderLabel="Search"
+                  [formControl]="fileFilterCtrl"></ngx-mat-select-search>
+              </mat-option>
+              <mat-option *ngFor="let file of filteredFiles | async" [value]="file._id">
+                {{file.uploadTime | date: 'short'}} - {{file.name}}
+              </mat-option>
+            </mat-select>
+            <mat-error>{{getErrorMessage('input', i)}}</mat-error>
+          </mat-form-field>
+
+          <button mat-mini-fab color="primary" (click)="removeInput(i)" type="button">
+            <mat-icon aria-label="Remove input">remove</mat-icon>
+          </button>
+        </div>
+
       </div>
 
       <button mat-raised-button color="accent" type="submit" class="mt-2">Submit</button>
