--- a/src/servers/web/client/src/app/components/dashboard/dashboard.component.html
+++ b/src/servers/web/client/src/app/components/dashboard/dashboard.component.html
@@ -30,8 +30,8 @@
       </button>
     </mat-menu>
 
-    <button mat-menu-item class="sidenav-button" (click)="logs()">
-      <mat-icon>description</mat-icon> Files
+    <button mat-menu-item class="sidenav-button" (click)="files()">
+      <mat-icon>file_copy</mat-icon> Files
     </button>
 
     <button mat-menu-item class="sidenav-button" (click)="logs()">
