Improvements over file handling
- Add download of files
- Error handling in endpoints
- etc

Signed-off-by: Mikael Mello <git@mikaelmello.com>

--- a/src/servers/web/client/src/app/components/user-files-list/user-files-list.component.html
+++ b/src/servers/web/client/src/app/components/user-files-list/user-files-list.component.html
@@ -6,7 +6,7 @@
 
   <ng-container matColumnDef="name">
     <mat-header-cell *matHeaderCellDef mat-sort-header>Name</mat-header-cell>
-    <mat-cell *matCellDef="let file">{{file.name}}</mat-cell>
+    <mat-cell *matCellDef="let file"><a href="#" (click)="download(file); false">{{file.name}}</a></mat-cell>
   </ng-container>
 
   <ng-container matColumnDef="size">
