Add taskset details, service for tasks, bug fixes, the whole package
Signed-off-by: Mikael Mello <git@mikaelmello.com>

--- a/src/servers/web/client/src/app/components/tasksets/tasksets.component.html
+++ b/src/servers/web/client/src/app/components/tasksets/tasksets.component.html
@@ -1,5 +1,7 @@
-<div class="content-wrapper">
+<div class="content-wrapper" [hidden]="route.firstChild">
   <div class="container-fluid">
     <app-taskset-list [customTitle]="customTitle" [tasksetState]="tasksetState"></app-taskset-list>
   </div>
 </div>
+
+<router-outlet></router-outlet>
