--- a/src/servers/web/client/src/app/components/taskset-list/taskset-list.component.html
+++ b/src/servers/web/client/src/app/components/taskset-list/taskset-list.component.html
@@ -12,7 +12,8 @@
 
   <ng-container matColumnDef="name">
     <mat-header-cell *matHeaderCellDef mat-sort-header>Name</mat-header-cell>
-    <mat-cell *matCellDef="let row">{{row.name}}</mat-cell>
+    <mat-cell *matCellDef="let row"><a [routerLink]="['/', 'dashboard', 'tasksets', row._id]">{{row.name}}</a>
+    </mat-cell>
   </ng-container>
 
   <ng-container matColumnDef="startTime">
