--- a/src/servers/web/client/src/app/components/taskset-create/taskset-create.component.html
+++ b/src/servers/web/client/src/app/components/taskset-create/taskset-create.component.html
@@ -18,8 +18,8 @@
       <div class="row">
         <mat-form-field class="col-2">
           <mat-select placeholder="Runnable Type" formControlName="runnableType">
-            <mat-option value="java">Java (java -jar)</mat-option>
-            <mat-option value="java">Python 3 (python3)</mat-option>
+            <mat-option value="java -jar">Java (java -jar)</mat-option>
+            <mat-option value="python3">Python 3 (python3)</mat-option>
           </mat-select>
           <mat-error>{{getErrorMessage('runnableType')}}</mat-error>
         </mat-form-field>
