--- a/src/servers/web/client/src/app/components/taskset-details/taskset-details.component.html
+++ b/src/servers/web/client/src/app/components/taskset-details/taskset-details.component.html
@@ -15,6 +15,7 @@
             <mat-list>
               <h3 mat-subheader>Details</h3>
               <p mat-line>Name: {{taskset.name}}</p>
+              <p mat-line *ngIf="taskset.description">Description: {{taskset.description}}</p>
               <p mat-line>Command Template: {{taskset.argumentTemplate}}</p>
               <p mat-line>Error Limit: {{taskset.errorLimitCount}}</p>
               <p mat-line>State: {{taskset.state | statePipe}}</p>
